--- a/src/Diamante/DeskBundle/bower.json
+++ b/src/Diamante/DeskBundle/bower.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "d3": "~3.5.6",
-    "d3-tip": "~0.6.7"
+    "d3-tip": "~0.6.7",
+    "xregexp": "~3.0.0"
   },
   "resolutions": {
     "d3": "~3.5.6"
