--- a/src/Diamante/DeskBundle/Resources/config/requirejs.yml
+++ b/src/Diamante/DeskBundle/Resources/config/requirejs.yml
@@ -1,4 +1,9 @@
 config:
+    map:
+        '*':
+            'oro/datagrid/action/delete-action': 'diamante/datagrid/action/delete-action'
+        'diamante/datagrid/action/delete-action': 'oro/datagrid/action/delete-action'
+
     paths:
         'd3': 'bundles/diamantedesk/lib/d3/d3.min.js'
         'd3-tip' : 'bundles/diamantedesk/lib/d3-tip/index.js'
@@ -6,4 +11,5 @@ config:
         'diamante/attachments/draganddrop': 'bundles/diamantedesk/js/diam.attachments.js'
         'diamante/ajax.messages': 'bundles/diamantedesk/js/diam.ajax.messages.js'
         'diamante/palette': 'bundles/diamantedesk/js/palette.js'
+        'diamante/datagrid/action/delete-action' : 'bundles/diamantedesk/js/datagrid/action/delete-action.js'
         'oroform/js/validator/regex' : 'bundles/diamantedesk/js/validator/regex.js'
