DIAM-1361 Impossible to make changes in your custom quick filter

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -81,3 +81,4 @@ whitelist:
     - '^oro_dashboard_[a-z_]+'
     - '^oro_tag_[a-z_]+'
     - '^oro_api_(get|post|put|delete)_navigationitems'
+    - 'oro_datagrid_api_rest_gridview_[a-z_]+'
