DIAM-1425 add list action

--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -7,85 +7,97 @@ datagrid:
           - w.id
           - w.name
           - w.active
+          - ('workflow') as type
         from:
           - { table: %diamante_automation.workflow_rule.entity.class%, alias: w}
 
-      properties:
-        id: ~
-        type: "workflow"
+    properties:
+      id: ~
+      type: ~
 
-        view_link:
-          type: url
-          route: diamante_automation_view
-          params: [type, id]
+      view_link:
+        type: url
+        route: diamante_automation_view
+        params: [type, id]
 
-        update_link:
-          type: url
-          route: diamante_automation_update
-          params: [type, id]
+      update_link:
+        type: url
+        route: diamante_automation_update
+        params: [type, id]
 
-        delete_link:
-          type: url
-          route: diamante_automation_delete
-          params: [type, id]
+      delete_link:
+        type: url
+        route: diamante_automation_delete
+        params: [type, id]
 
+    sorters:
       columns:
         name:
-          label: diamante.automation.common.name
-        active:
-          label: diamante.automation.attributes.active
-          frontend_type: select
-          choices:
-            0: No
-            1: Yes
+          data_name: w.name
 
-      actions:
-        view:
-          type: navigate
-          label: diamante.automation.rule.actions.view
-          icon: eye-open
-          link: view_link
-          rowAction: true
-          acl_resource: VIEW;Entity:DiamanteAutomationBundle:WorkflowRule
-        update:
-          type: navigate
-          label: diamante.automation.rule.actions.update
-          icon: edit
-          link: update_link
-          rowAction: true
-          acl_resource: EDIT;Entity:DiamanteAutomationBundle:WorkflowRule
-        delete:
-          type: navigate
-          label: diamante.automation.rule.actions.delete
-          icon: trash
-          link: delete_link
-          rowAction: true
-          acl_resource: DELETE;Entity:DiamanteAutomationBundle:WorkflowRule
+    filters:
+      columns:
+        name:
+          type: string
+          data_name: w.name
 
-      mass_actions:
-        delete:
-          type: delete
-          label: diamante.automation.rule.actions.mass.remove
-          acl_resource: DELETE;Entity:DiamanteAutomationBundle:WorkflowRule
-          entity_name: DiamanteAutomationBundle:WorkflowRule
-          data_identifier: w.id
-          icon: trash
-#        deactivate:
-#          type: deactivate
-#          label: diamante.automation.rule.actions.mass.deactivate
-#          acl_resource: EDIT;Entity:DiamanteAutomationBundle:WorkflowRule
-#          entity_name: DiamanteAutomationBundle:WorkflowRule
-#          data_identifier: w.id
-#          icon: close
-#        activate:
-#          type: activate
-#          label: diamante.automation.rule.actions.mass.activate
-#          acl_resource: EDIT;Entity:DiamanteAutomationBundle:WorkflowRule
-#          entity_name: DiamanteAutomationBundle:WorkflowRule
-#          data_identifier: w.id
-#          icon: check
+    columns:
+      name:
+        label: diamante.automation.common.name
+      active:
+        label: diamante.automation.attributes.active
+        frontend_type: select
+        choices:
+          0: No
+          1: Yes
 
-  diamante-automation-workflow-grid:
+    actions:
+      view:
+        type: navigate
+        label: diamante.automation.rule.actions.view
+        icon: eye-open
+        link: view_link
+        rowAction: true
+        acl_resource: VIEW;Entity:DiamanteAutomationBundle:WorkflowRule
+      update:
+        type: navigate
+        label: diamante.automation.rule.actions.update
+        icon: edit
+        link: update_link
+        rowAction: true
+        acl_resource: EDIT;Entity:DiamanteAutomationBundle:WorkflowRule
+      delete:
+        type: navigate
+        label: diamante.automation.rule.actions.delete
+        icon: trash
+        link: delete_link
+        rowAction: true
+        acl_resource: DELETE;Entity:DiamanteAutomationBundle:WorkflowRule
+
+    mass_actions:
+      delete:
+        type: delete
+        label: diamante.automation.rule.actions.mass.remove
+        acl_resource: DELETE;Entity:DiamanteAutomationBundle:WorkflowRule
+        entity_name: DiamanteAutomationBundle:WorkflowRule
+        data_identifier: w.id
+        icon: trash
+#      deactivate:
+#        type: deactivate
+#        label: diamante.automation.rule.actions.mass.deactivate
+#        acl_resource: EDIT;Entity:DiamanteAutomationBundle:WorkflowRule
+#        entity_name: DiamanteAutomationBundle:WorkflowRule
+#        data_identifier: w.id
+#        icon: close
+#      activate:
+#        type: activate
+#        label: diamante.automation.rule.actions.mass.activate
+#        acl_resource: EDIT;Entity:DiamanteAutomationBundle:WorkflowRule
+#        entity_name: DiamanteAutomationBundle:WorkflowRule
+#        data_identifier: w.id
+#        icon: check
+
+  diamante-automation-business-grid:
     source:
       type: orm
       query:
@@ -94,85 +106,97 @@ datagrid:
           - b.name
           - b.timeInterval
           - b.active
+          - ('business') as type
         from:
           - { table: %diamante_automation.business_rule.entity.class%, alias: b}
 
-      properties:
-        id: ~
-        type: "business"
+    properties:
+      id: ~
+      type: ~
 
-        view_link:
-          type: url
-          route: diamante_automation_view
-          params: [type, id]
+      view_link:
+        type: url
+        route: diamante_automation_view
+        params: [type, id]
 
-        update_link:
-          type: url
-          route: diamante_automation_update
-          params: [type, id]
+      update_link:
+        type: url
+        route: diamante_automation_update
+        params: [type, id]
 
-        delete_link:
-          type: url
-          route: diamante_automation_delete
-          params: [type, id]
+      delete_link:
+        type: url
+        route: diamante_automation_delete
+        params: [type, id]
 
+    sorters:
       columns:
         name:
-          label: diamante.automation.common.name
-        time:
-          label: diamante.automation.rule.business.repetition_time
-#          frontend_type: select
-#          choices: @diamante_automation.datagrid.helper->getTimeIntervalChoices
+          data_name: b.name
 
-        active:
-          label: diamante.automation.attributes.active
-          frontend_type: select
-          choices:
-            0: No
-            1: Yes
+    filters:
+      columns:
+        name:
+          type: string
+          data_name: b.name
 
-      actions:
-        view:
-          type: navigate
-          label: diamante.automation.rule.actions.view
-          icon: eye-open
-          link: view_link
-          rowAction: true
-          acl_resource: VIEW;Entity:DiamanteAutomationBundle:BusinessRule
-        update:
-          type: navigate
-          label: diamante.automation.rule.actions.update
-          icon: edit
-          link: update_link
-          rowAction: true
-          acl_resource: EDIT;Entity:DiamanteAutomationBundle:BusinessRule
-        delete:
-          type: navigate
-          label: diamante.automation.rule.actions.delete
-          icon: trash
-          link: delete_link
-          rowAction: true
-          acl_resource: DELETE;Entity:DiamanteAutomationBundle:BusinessRule
+    columns:
+      name:
+        label: diamante.automation.common.name
+      time:
+        label: diamante.automation.rule.business.repetition_time
+#        frontend_type: select
+#        choices: @diamante_automation.datagrid.helper->getTimeIntervalChoices
 
-      mass_actions:
-        delete:
-          type: delete
-          label: diamante.automation.rule.actions.mass.remove
-          acl_resource: DELETE;Entity:DiamanteAutomationBundle:BusinessRule
-          entity_name: DiamanteAutomationBundle:BusinessRule
-          data_identifier: w.id
-          icon: trash
+      active:
+        label: diamante.automation.attributes.active
+        frontend_type: select
+        choices:
+          0: No
+          1: Yes
+
+    actions:
+      view:
+        type: navigate
+        label: diamante.automation.rule.actions.view
+        icon: eye-open
+        link: view_link
+        rowAction: true
+        acl_resource: VIEW;Entity:DiamanteAutomationBundle:BusinessRule
+      update:
+        type: navigate
+        label: diamante.automation.rule.actions.update
+        icon: edit
+        link: update_link
+        rowAction: true
+        acl_resource: EDIT;Entity:DiamanteAutomationBundle:BusinessRule
+      delete:
+        type: navigate
+        label: diamante.automation.rule.actions.delete
+        icon: trash
+        link: delete_link
+        rowAction: true
+        acl_resource: DELETE;Entity:DiamanteAutomationBundle:BusinessRule
+
+    mass_actions:
+      delete:
+        type: delete
+        label: diamante.automation.rule.actions.mass.remove
+        acl_resource: DELETE;Entity:DiamanteAutomationBundle:BusinessRule
+        entity_name: DiamanteAutomationBundle:BusinessRule
+        data_identifier: b.id
+        icon: trash
 #        deactivate:
 #          type: deactivate
 #          label: diamante.automation.rule.actions.mass.deactivate
 #          acl_resource: EDIT;Entity:DiamanteAutomationBundle:BusinessRule
 #          entity_name: DiamanteAutomationBundle:BusinessRule
-#          data_identifier: w.id
+#          data_identifier: b.id
 #          icon: close
 #        activate:
 #          type: activate
 #          label: diamante.automation.rule.actions.mass.activate
 #          acl_resource: EDIT;Entity:DiamanteAutomationBundle:BusinessRule
 #          entity_name: DiamanteAutomationBundle:BusinessRule
-#          data_identifier: w.id
+#          data_identifier: b.id
 #          icon: check
