--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -23,6 +23,7 @@ whitelist:
     - 'oro_translation_download'
     - 'oro_dataaudit_index'
     - 'oro_dataaudit_history'
+    - 'oro_resize_attachment'
 
     #OroUserBundle
     - 'oro_activity_list_api_get_list'
