DIAM-1275: Rule and actions to automatically move ticket to branch

--- a/Resources/config/automation.yml
+++ b/Resources/config/automation.yml
@@ -29,6 +29,9 @@ diamante_automation:
     contains:
       class: "Diamante\AutomationBundle\Rule\Condition\Expression\Contains"
       frontend_label: diamante.automation.condition.contains
+    veq:
+      class: "Diamante\AutomationBundle\Rule\Condition\Expression\Veq"
+      frontend_label: diamante.automation.condition.veq
 
 
   actions:
