DIAM-1278: Rule and actions to automatically move ticket to branch

--- a/src/Diamante/DeskBundle/Resources/config/automation.yml
+++ b/src/Diamante/DeskBundle/Resources/config/automation.yml
@@ -45,3 +45,11 @@ diamante_automation:
         id: @diamante.desk.automation.action.move_to_branch
         frontend_label: diamante.desk.automation.action.move_to_branch
         data_types: ['virtual']
+
+parameters:
+  diamante.automation.action.move_to_branch.class: Diamante\DeskBundle\Automation\Action\MoveToBranchAction
+
+services:
+  diamante.automation.action.move_to_branch:
+    class: %diamante.automation.action.move_to_branch.class%
+    arguments: @doctrine
